# todos

./: bun.lockb  package.json  tailwind.config.js  tsconfig.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  todos.db
src-tauri/src/: database.rs  main.rs
src/components/: CheckIcon.tsx  CloseIcon.tsx  CustomTitleBar.tsx  Input.tsx  List.tsx  ListItem.tsx
